# rsigma

./: .dockerignore  .gitattributes  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  mkdocs.yml  rust-toolchain.toml
ci/wasm-smoke/: Cargo.toml
ci/wasm-smoke/src/: lib.rs
crates/rsigma-cli/: Cargo.toml  README.md
crates/rsigma-cli/src/: exit_code.rs  fix.rs  logsource_opts.rs  main.rs  rule_meta.rs
crates/rsigma-cli/tests/: cli.rs  cli_backtest.rs  cli_classify.rs  cli_config.rs  cli_convert.rs  cli_coverage.rs  cli_daemon.rs  cli_daemon_alert_pipeline.rs  cli_daemon_audit_trail.rs  cli_daemon_auth.rs  cli_daemon_correlations.rs  cli_daemon_delivery.rs  cli_daemon_dynamic.rs  cli_daemon_enrichment.rs  cli_daemon_fields_observer.rs  cli_daemon_http.rs  cli_daemon_logsource_routing.rs  cli_daemon_nats.rs  cli_daemon_otlp.rs  cli_daemon_risk.rs  cli_daemon_schema_routing.rs  cli_daemon_schemas.rs  cli_daemon_status.rs  cli_daemon_tail.rs  cli_daemon_tap.rs  cli_daemon_tls.rs  cli_daemon_uds.rs  cli_daemon_webhook.rs  cli_deprecation.rs  cli_discover.rs  cli_disposition_recipes.rs  cli_doc.rs  cli_draft.rs  cli_dump_correlation_state.rs  cli_eval.rs  cli_explain.rs  cli_fields.rs  cli_lint.rs  cli_logsource_routing.rs  cli_output_format.rs  (+6 more)
crates/rsigma-convert/: Cargo.toml  README.md
crates/rsigma-convert/pipelines/: ocsf_postgres.yml  ocsf_postgres_multi_table.yml
crates/rsigma-convert/schema/: timescaledb_security_events.sql
crates/rsigma-convert/src/: backend.rs  condition.rs  condition_ir.rs  convert.rs  error.rs  ir_convert.rs  lib.rs  output.rs  state.rs
crates/rsigma-convert/tests/: golden_fibratus.rs  golden_lynxdb.rs  golden_postgres.rs  postgres_integration.rs
crates/rsigma-eval/: Cargo.toml  README.md
crates/rsigma-eval/benches/: array.rs  correlation.rs  datagen.rs  eval.rs  logsource.rs  routing.rs  schema.rs
crates/rsigma-eval/pipelines/: ecs_windows.yml  fibratus_windows.yml  gcp_audit.yml  sysmon.yml
crates/rsigma-eval/src/: compiler.rs  correlation.rs  correlation_engine.rs  engine.rs  error.rs  event.rs  field_observer.rs  fields.rs  lib.rs  logsource.rs  matcher.rs  result.rs  router.rs  rule_draft.rs  rule_index.rs  schema.rs  schema_discovery.rs
crates/rsigma-eval/tests/: correlation_edge.rs  error_paths.rs  gcp_audit_pipeline.rs  hir_cache.rs  integration.rs  match_detail.rs  pipeline_errors.rs  regression_eval.rs  schema_classification_golden.rs  state_snapshot.rs  wire_shape_golden.rs
crates/rsigma-ir/: Cargo.toml  README.md
crates/rsigma-ir/src/: cache.rs  error.rs  hir.rs  lib.rs  raise.rs
crates/rsigma-ir/tests/: baselines.rs  correlation.rs  expected_hir.rs  filters.rs  ir_eval_semantics.rs  modifiers.rs  selectors.rs
crates/rsigma-lsp/: Cargo.toml  README.md
crates/rsigma-lsp/src/: code_action.rs  completion.rs  data.rs  diagnostics.rs  main.rs  position.rs  server.rs
crates/rsigma-mcp/: Cargo.toml  README.md
crates/rsigma-mcp/src/: http.rs  input.rs  lib.rs  tools.rs
crates/rsigma-mcp/tests/: http.rs  stdio.rs
crates/rsigma-parser/: Cargo.toml  README.md
crates/rsigma-parser/benches/: datagen.rs  parse.rs
crates/rsigma-parser/src/: ads.rs  ast.rs  condition.rs  error.rs  fieldpath.rs  lib.rs  lint.rs  parser.rs  reference.rs  sigma.pest  value.rs  version.rs
crates/rsigma-parser/tests/: ast_snapshots.rs  parse_errors.rs
crates/rsigma-runtime/: Cargo.toml  README.md
crates/rsigma-runtime/benches/: dynamic_pipelines.rs  enrichment.rs  input_formats.rs  otlp.rs  risk.rs  runtime_throughput.rs
crates/rsigma-runtime/src/: egress.rs  engine.rs  error.rs  field_observer.rs  lib.rs  metrics.rs  pipeline_deprecation.rs  processor.rs  selector.rs  tap.rs
crates/rsigma-runtime/tests/: alert_pipeline_golden.rs  enrichment_integration.rs  enrichment_lookup.rs  evtx_integration.rs  integration.rs  kafka_integration.rs  nats_e2e.rs  nats_integration.rs  sources_integration.rs
crates/rstix/: CHANGELOG.md  Cargo.toml  README.md
crates/rstix/src/: enrichment.rs  graph.rs  lib.rs  marking.rs  pattern.rs  serde_impls.rs  store.rs  taxii.rs  testing.rs  validate.rs
crates/rstix/tests/: bundle.rs  graph.rs  integration.rs  marking.rs  pattern_eval.rs  pattern_eval_errors.rs  pattern_eval_operators.rs  pattern_eval_sco_fields.rs  pattern_eval_security.rs  pattern_indicator.rs  pattern_parse.rs  pattern_spec_eval.rs  spec.rs  store.rs  store_fs.rs  taxii_live.rs  taxii_store.rs  validate_conformance.rs  validate_diagnostic_coverage.rs  validate_pipeline.rs  validation.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_condition/: basic
fuzz/corpus/fuzz_eval_matching/: deep_nesting  windows_security
fuzz/corpus/fuzz_input_formats/: syslog_rfc5424
fuzz/corpus/fuzz_parse_yaml/: simple_rule.yml
fuzz/fuzz_targets/: fuzz_alert_pipeline_config.rs  fuzz_condition.rs  fuzz_disposition_record.rs  fuzz_eval_matching.rs  fuzz_extract_cel.rs  fuzz_extract_jq.rs  fuzz_extract_jsonpath.rs  fuzz_field_modifiers.rs  fuzz_http_response.rs  fuzz_include_parse.rs  fuzz_input_formats.rs  fuzz_lint_fix.rs  fuzz_parse_yaml.rs  fuzz_pipeline_sources_yaml.rs  fuzz_pipeline_yaml.rs  fuzz_regex_compile.rs  fuzz_risk_config.rs  fuzz_rstix_parse_bundle.rs  fuzz_rstix_validate_json.rs  fuzz_scorecard_promtext.rs  fuzz_stix_pattern.rs  fuzz_template_expand.rs
fuzz/seeds/fuzz_alert_pipeline_config/: basic.yml  inhibit.yml
fuzz/seeds/fuzz_condition/: complex  nested_parens  selector
fuzz/seeds/fuzz_eval_matching/: array_values  nested_object  rules.yml  sysmon_network
fuzz/seeds/fuzz_extract_cel/: filter_list.txt  map_expr.txt  simple_field.txt  size_func.txt  string_method.txt  ternary.txt
fuzz/seeds/fuzz_extract_jq/: deep_nesting.txt  filter_select.txt  keys.txt  nested_field.txt  out_of_bounds.txt  simple_array.txt
fuzz/seeds/fuzz_extract_jsonpath/: deep_path.txt  filter_expr.txt  missing_path.txt  nested_field.txt  recursive_descent.txt  simple_array.txt
fuzz/seeds/fuzz_field_modifiers/: basic  regex_flags  wildcards
fuzz/seeds/fuzz_http_response/: bad_csv.csv  (+6 more)
(+956 files in other folders)
