[workspace]
resolver = "3"
members = [
    "crates/rsigma-parser",
    "crates/rsigma-eval",
    "crates/rsigma-cli",
    "crates/rsigma-lsp",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
repository = "https://github.com/timescale/rsigma"
homepage = "https://github.com/timescale/rsigma"
