[package]
name = "rsigma-wasm-smoke"
version = "0.0.0"
edition = "2024"
publish = false

# CI-only fixture that links rsigma-parser and rsigma-eval into a cdylib and
# exports a self-test entry point. It is not the first-party WASM guest crate
# (that is a separate, future deliverable); its sole purpose is to let CI
# instantiate a real module in a host-neutral runtime and prove the crates run
# under wasm32-unknown-unknown without any JavaScript imports.
[lib]
crate-type = ["cdylib"]

[dependencies]
rsigma-parser = { path = "../../crates/rsigma-parser", default-features = false }
rsigma-eval = { path = "../../crates/rsigma-eval", default-features = false }
serde_json = "1"

[profile.release]
opt-level = "s"
# Abort on panic so a failed self-test assertion traps the module and the host
# runtime exits non-zero, turning the smoke test red.
panic = "abort"
