[package]
name = "rsigma-convert"
description = "Sigma rule conversion engine — convert rules to backend-native query strings"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# docs.rs builds with default features unless told otherwise; the sigma_cli
# module is feature-gated public API and must appear in the rendered docs.
[package.metadata.docs.rs]
all-features = true

[features]
default = []
# Delegation helper for the external sigma-cli: discovery, `sigma convert`
# argument mapping, and output classification. std-only, no extra
# dependencies; conversion itself stays native and in-process.
sigma-cli = []

[dependencies]
rsigma-parser = { path = "../rsigma-parser", version = "0.19.0" }
rsigma-eval = { path = "../rsigma-eval", version = "0.19.0" }
thiserror = "2"
serde_json = "1"
yaml_serde = "0.10"
regex = "1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
insta = "1.46"
