[package]
name = "rsigma-eval"
description = "Evaluator for Sigma detection and correlation rules — match rules against events"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
rsigma-parser = { path = "../rsigma-parser", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
base64 = "0.22"
ipnet = "2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
log = "0.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.10.0"
rand = "0.9"

[[bench]]
name = "eval"
harness = false

[[bench]]
name = "correlation"
harness = false
