[package]
name = "rsigma-eval"
description = "Evaluator for Sigma detection and correlation rules — match rules against events"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
parallel = ["rayon"]
daachorse-index = ["dep:daachorse"]

[dependencies]
rsigma-parser = { path = "../rsigma-parser", version = "0.16.0" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
yaml_serde = "0.10"
regex = "1"
aho-corasick = "1"
ahash = "0.8"
base64 = "0.22"
ipnet = "2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
log = "0.4"
rayon = { version = "1", optional = true }
daachorse = { version = "3", optional = true }

[dev-dependencies]
criterion = "0.8"
proptest = "1.10.0"
rand = "0.10"
tempfile = "3.27.0"

[[bench]]
name = "eval"
harness = false

[[bench]]
name = "correlation"
harness = false

# Not a Criterion bench: measures peak heap via a counting global allocator
# (window-mode memory stress). Prints an aligned results table.
[[bench]]
name = "correlation_memory"
harness = false

[[bench]]
name = "result_serialize"
harness = false
