[package]
name = "rsigma-eval"
description = "Evaluator for Sigma detection and correlation rules — match rules against events"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
parallel = ["rayon"]
daachorse-index = ["dep:daachorse"]

[dependencies]
rsigma-parser = { path = "../rsigma-parser", version = "0.20.0", default-features = false }
rsigma-ir = { path = "../rsigma-ir", version = "0.20.0", default-features = false }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
yaml_serde = "0.10"
regex = "1"
aho-corasick = "1"
base64 = "0.22"
ipnet = "2"
thiserror = "2"
flate2 = "1"
log = "0.4"
rayon = { version = "1", optional = true }
daachorse = { version = "3", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng", "std"] }
# Drop chrono's default `wasmbind` feature on this target: it pulls
# `wasm-bindgen`/`js-sys`, which would make the module importable only from a
# JavaScript host. Keeping it off yields a host-neutral module that instantiates
# under Wazero, Wasmtime, and browsers alike.
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
ahash = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.8"
proptest = "1.10.0"
rand = "0.10"
tempfile = "3.27.0"

[[bench]]
name = "eval"
harness = false

[[bench]]
name = "logsource"
harness = false

[[bench]]
name = "schema"
harness = false

[[bench]]
name = "array"
harness = false

[[bench]]
name = "routing"
harness = false

[[bench]]
name = "correlation"
harness = false

# Not a Criterion bench: measures peak heap via a counting global allocator
# (window-mode memory stress). Prints an aligned results table.
[[bench]]
name = "correlation_memory"
harness = false

[[bench]]
name = "result_serialize"
harness = false
