[package]
name = "rsigma-ir"
description = "Intermediate representation for Sigma rules — shared canonical form for eval and convert"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
rsigma-parser = { path = "../rsigma-parser", version = "0.20.0", default-features = false }
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
yaml_serde = "0.10"

[dev-dependencies]
rsigma-eval = { path = "../rsigma-eval", version = "0.20.0" }