[package]
name = "rsigma-lsp"
description = "Language Server Protocol (LSP) server for Sigma detection and correlation rules"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rsigma-lsp"
path = "src/main.rs"

[dependencies]
rsigma-parser = { path = "../rsigma-parser" }
rsigma-eval = { path = "../rsigma-eval" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "time", "sync"] }
log = "0.4"
env_logger = "0.11"
