[package]
name = "rsigma-parser"
description = "Parser for Sigma detection rules, correlations, and filters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pest = "2"
pest_derive = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
