[package]
name = "rsigma-parser"
description = "Parser for Sigma detection rules, correlations, and filters"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
log = "0.4"
pest = "2"
pest_derive = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"

[dev-dependencies]
criterion = "0.5"
insta = "1.46"
rand = "0.9"

[[bench]]
name = "parse"
harness = false
