[package]
name = "rsigma-parser"
description = "Parser for Sigma detection rules, correlations, and filters"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["fix"]
fix = ["dep:yamlpatch", "dep:yamlpath"]

[dependencies]
globset = "0.4"
log = "0.4"
pest = "2"
pest_derive = "2"
serde = { version = "1", features = ["derive"] }
yaml_serde = "0.10"
yamlpath = { version = "1.26", optional = true }
yamlpatch = { version = "1.26", optional = true }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
criterion = "0.8"
insta = "1.46"
rand = "0.10"
tempfile = "3"

[[bench]]
name = "parse"
harness = false
