[package]
name = "rsigma-runtime"
description = "Streaming runtime for rsigma — event sources, sinks, and log processing pipeline"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
nats = ["async-nats", "tokio-stream"]
logfmt = []
cef = []
evtx = ["dep:evtx"]

[dependencies]
rsigma-parser = { path = "../rsigma-parser", version = "0.6.0" }
rsigma-eval = { path = "../rsigma-eval", version = "0.6.0", features = ["parallel"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "io-util", "io-std"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
arc-swap = "1"
syslog_loose = "0.23"
chrono = { version = "0.4", default-features = false, features = ["std"] }

# optional
tokio-stream = { version = "0.1", optional = true }
async-nats = { version = "0.47", optional = true }
evtx = { version = "0.11", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
criterion = "0.5"
rand = "0.9"
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "runtime_throughput"
harness = false
