[package]
name = "rsigma-runtime"
description = "Streaming runtime for rsigma — event sources, sinks, and log processing pipeline"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
nats = ["async-nats", "tokio-stream", "time", "futures"]
otlp = ["opentelemetry-proto", "prost", "tonic", "flate2", "rustls"]
logfmt = []
cef = []
evtx = ["dep:evtx"]
# Unix domain socket event source and sink (unix:// input/output). Pulls in
# tokio's net feature; the code is additionally #[cfg(unix)]-gated.
uds = ["tokio/net"]
daachorse-index = ["rsigma-eval/daachorse-index"]

[dependencies]
rsigma-parser = { path = "../rsigma-parser", version = "0.18.0" }
rsigma-eval = { path = "../rsigma-eval", version = "0.18.0", features = ["parallel"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "io-util", "io-std", "process", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
thiserror = "2"
tracing = "0.1"
arc-swap = "1"
parking_lot = "0.12"
syslog_loose = "0.23"
chrono = { version = "0.4", default-features = false, features = ["std"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
humantime = "2"
globset = "0.4"
regex = "1"
csv = "1"
jaq-core = "3.0"
jaq-json = "2.0"
jaq-std = "3.0"
jsonpath-rust = "1"
cel = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.39", features = ["bundled"] }
notify = "8.2"
hmac = { version = "0.13", features = ["zeroize"] }
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
zeroize = "1.9"

# optional
tokio-stream = { version = "0.1", optional = true }
async-nats = { version = "0.49", optional = true }
futures = { version = "0.3", optional = true }
time = { version = "0.3", optional = true }
evtx = { version = "0.12", optional = true, default-features = false }
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic", "logs", "with-serde"], optional = true }
prost = { version = "0.14", optional = true }
tonic = { version = "0.14", features = ["gzip", "tls-aws-lc", "tls-webpki-roots"], optional = true }
flate2 = { version = "1", optional = true }
rustls = { version = "0.23", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
rcgen = "0.14"
time = "0.3"
criterion = "0.8"
rand = "0.10"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["nats"] }
wiremock = "0.6"

[[bench]]
name = "runtime_throughput"
harness = false

[[bench]]
name = "dynamic_pipelines"
harness = false

[[bench]]
name = "alert_pipeline"
harness = false

[[bench]]
name = "risk"
harness = false

[[bench]]
name = "enrichment"
harness = false

[[bench]]
name = "input_formats"
harness = false
required-features = ["logfmt", "cef", "evtx"]

[[bench]]
name = "otlp"
harness = false
required-features = ["otlp"]
