[package]
name = "rstix"
description = "STIX 2.1 + TAXII 2.1 library for Rust"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# docs.rs builds with default features unless told otherwise; the pattern
# engine and validation pipeline are feature-gated public API and must
# appear in the rendered docs.
[package.metadata.docs.rs]
all-features = true

[features]
default = ["serde"]

serde = ["dep:serde"]
pattern = ["dep:ipnet", "dep:regex", "dep:unicode-normalization"]
validate = ["serde", "pattern"]
graph = ["serde"]
marking = ["serde"]
store = ["serde"]
store-fs = ["store"]

[dependencies]
phf = { version = "0.14", features = ["macros"] }
serde_jcs = "0.2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "v5"] }

idna = "1.0"
url = "2.5"
email_address = "0.2"
base64 = "0.22"
encoding_rs = "0.8"

serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1"
ipnet = { version = "2", optional = true }
regex = { version = "1", optional = true }
unicode-normalization = { version = "0.1", optional = true }

[[test]]
name = "pattern_parse"
required-features = ["pattern"]

[[test]]
name = "pattern_eval"
required-features = ["pattern", "serde"]

[[test]]
name = "pattern_spec_eval"
required-features = ["pattern", "serde"]

[[test]]
name = "pattern_eval_operators"
required-features = ["pattern", "serde"]

[[test]]
name = "pattern_eval_sco_fields"
required-features = ["pattern", "serde"]

[[test]]
name = "pattern_eval_errors"
required-features = ["pattern", "serde"]

[[test]]
name = "pattern_eval_security"
required-features = ["pattern", "serde"]

[[test]]
name = "pattern_indicator"
required-features = ["pattern", "serde"]

[[test]]
name = "validate_pipeline"
required-features = ["validate"]

[[test]]
name = "graph"
required-features = ["graph", "serde"]

[[test]]
name = "marking"
required-features = ["marking", "serde"]

[[test]]
name = "store"
required-features = ["store", "serde"]

[[test]]
name = "store_fs"
required-features = ["store-fs", "serde"]
